Fix for CLS on Mobile

--- a/assets/base_custom.css
+++ b/assets/base_custom.css
@@ -14,6 +14,10 @@ header details[open]:after {
   backdrop-filter: blur(5px);
 }
 
+.header-wrapper {
+  min-height: 7rem;
+}
+
 body {
   width: 100vw;
 }
